<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainactivity"

    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"

        android:textSize="60sp"

        android:gravity="center"

        android:id="@+id/title"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>
    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"

        android:id="@+id/email"

        android:layout_marginTop="50dp"
        android:hint="@string/email_address"

        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"


        android:id="@+id/password"
        android:layout_marginTop="30dp"


        android:hint="@string/password"

        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>
    <Button
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:id="@+id/resetpasssword"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/login"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fpassword"

        android:text="@string/fpassword"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@+id/resetpasssword"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/resetpasssword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"

        android:text="@string/register"
        android:textSize="15sp"
        app:layout_constraintRight_toRightOf="@+id/resetpasssword"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@+id/resetpasssword"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBar"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/resetpasssword"


         />




</androidx.constraintlayout.widget.ConstraintLayout>