<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registration"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="60sp"
        android:gravity="center"
        android:id="@+id/title"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>
    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_marginTop="50dp"
        android:hint="@string/email_address"

        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_marginTop="30dp"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>
    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:id="@+id/fullname"
        android:layout_marginTop="30dp"
        android:hint="@string/fullname"

        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>
    <Button
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:id="@+id/registeruser"
        android:layout_marginTop="30dp"

        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:background="@drawable/rounded_button"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBar"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/registeruser"

        />





</androidx.constraintlayout.widget.ConstraintLayout>