<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainactivity"
    android:layout_height="match_parent"
    tools:context=".Settings">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/blood_type_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:startIconDrawable="@drawable/ic_baseline_bloodtype_24"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/blood_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bt"
            android:inputType="none"

            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/rh_factor_1"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        app:startIconDrawable="@drawable/ic_d48f881573815a548a3390fdf252d9d5_800xauto_q_85"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/blood_type_1">

        <AutoCompleteTextView
            android:id="@+id/rh_factor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/rf"
            android:inputType="none"

            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronic_diseases"
        android:layout_marginTop="32dp"
        android:theme="@style/MySwitch"
        app:layout_constraintTop_toBottomOf="@id/rh_factor_1"
        app:layout_constraintLeft_toLeftOf="@+id/blood_type_1"

        >

    </androidx.appcompat.widget.SwitchCompat>
    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:id="@+id/chronic_diseases_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
        app:startIconDrawable="@drawable/ic__484021"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintTop_toBottomOf="@id/switch1">

    <MultiAutoCompleteTextView
        android:id="@+id/chronic_diseases"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/cd"
        android:text=""

        android:completionThreshold="1"/>

</com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergic_reactions"
        android:layout_marginTop="32dp"
        android:theme="@style/MySwitch"
        app:layout_constraintTop_toBottomOf="@id/chronic_diseases_1"
        app:layout_constraintLeft_toLeftOf="@+id/blood_type_1"

        >

    </androidx.appcompat.widget.SwitchCompat>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/allergic_diseases_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/switch2">

        <MultiAutoCompleteTextView
            android:id="@+id/allergic_diseases"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ad"
            android:text=""
            android:completionThreshold="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/allergic_diseases_1"
         />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBar"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        />



</androidx.constraintlayout.widget.ConstraintLayout>