<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainactivity"

    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"

        android:textSize="60sp"

        android:gravity="center"

        android:id="@+id/title"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>
    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"

        android:id="@+id/email"

        android:layout_marginTop="50dp"
        android:hint="@string/email_address"

        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <Button
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:id="@+id/resetpasssword"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/login"
        android:text="@string/resetpas"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>



</androidx.constraintlayout.widget.ConstraintLayout>